--- a/templates/login.html
+++ b/templates/login.html
@@ -80,7 +80,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="form-group">
-                <button type="submit">Submit</button>
+                <button type="submit">Login/Submit</button>
             </div>
         </form>
     </div>
